--- a/po/cs.po
+++ b/po/cs.po
@@ -2287,3 +2287,15 @@ msgstr ""
 #: ../src/terminal-window.c:3246
 msgid "C_lose Window"
 msgstr "_Zavřít okno"
+
+msgid "Transparent background"
+msgstr "Průsvitné pozadí"
+
+msgid "Title"
+msgstr "Záhlaví"
+
+msgid "_Title:"
+msgstr "Zá_hlaví:"
+
+msgid "Set Title"
+msgstr "Nastavit záhlaví"
