--- a/po/fr.po
+++ b/po/fr.po
@@ -2607,3 +2607,15 @@ msgstr "Fermer _la fenêtre"
 
 #~ msgid "_Same as text color"
 #~ msgstr "_Même couleur que le texte"
+
+msgid "Transparent background"
+msgstr "Arrière-plan transparent"
+
+msgid "Title"
+msgstr "Titre"
+
+msgid "_Title:"
+msgstr "_Titre :"
+
+msgid "Set Title"
+msgstr "Définir le titre"
