--- a/po/hi.po
+++ b/po/hi.po
@@ -2267,9 +2267,8 @@ msgstr "विंडो बंद करें (_l)"
 #~ msgid "Use custom default terminal si_ze"
 #~ msgstr "कस्टम डिफ़ॉल्ट टर्मिनल आकार का उपयोग करें (_z)"
 
-#~| msgid "_Title:"
-#~ msgid "Title"
-#~ msgstr "शीर्षक"
+msgid "Title"
+msgstr "शीर्षक"
 
 #~ msgid "When terminal commands set their o_wn titles:"
 #~ msgstr "जब टर्मिनल कमांड उनका अपना शीर्षक सेट करता है (_w):"
@@ -2289,8 +2288,8 @@ msgstr "विंडो बंद करें (_l)"
 #~ msgid "Close Window"
 #~ msgstr "विंडो बंद करें"
 
-#~ msgid "Set Title"
-#~ msgstr "शीर्षक नियत करें"
+msgid "Set Title"
+msgstr "शीर्षक नियत करें"
 
 #~ msgid "Switch to Tab 2"
 #~ msgstr "टैब 2 पर जाएँ"
@@ -2349,8 +2348,8 @@ msgstr "विंडो बंद करें (_l)"
 #~ msgid "_Input Methods"
 #~ msgstr "इनपुट विधियाँ (_I)"
 
-#~ msgid "_Title:"
-#~ msgstr "शीर्षक (_T):"
+msgid "_Title:"
+msgstr "शीर्षक (_T):"
 
 #~ msgid "Disable connection to session manager"
 #~ msgstr "सत्र प्रबंधक में कनेक्शन निष्क्रिय करें"
@@ -2979,8 +2978,8 @@ msgstr "विंडो बंद करें (_l)"
 #~ msgid "_Background image"
 #~ msgstr "पृष्ठभूमि छवि (_B)"
 
-#~ msgid "_Transparent background"
-#~ msgstr "पारदर्शी पृष्ठभूमि (_T)"
+msgid "Transparent background"
+msgstr "पारदर्शी पृष्ठभूमि"
 
 #~ msgid "S/Key Challenge Response"
 #~ msgstr "एस/कुंजी चैलेंज प्रतिक्रिया"
