--- a/po/hu.po
+++ b/po/hu.po
@@ -2302,3 +2302,14 @@ msgstr ""
 msgid "C_lose Window"
 msgstr "_Ablak bezárása"
 
+msgid "Title"
+msgstr "Cím"
+
+msgid "_Title:"
+msgstr "_Cím:"
+
+msgid "Set Title"
+msgstr "Cím beállítása"
+
+msgid "Transparent background"
+msgstr "Áttetsző háttér"
