--- a/po/nl.po
+++ b/po/nl.po
@@ -2608,3 +2608,15 @@ msgstr "Venster sl_uiten"
 
 #~ msgid "_Add or Remove…"
 #~ msgstr "_Toevoegen of verwijderen…"
+
+msgid "Title"
+msgstr "Titel"
+
+msgid "_Title:"
+msgstr "_Titel:"
+
+msgid "Set Title"
+msgstr "Titel instellen"
+
+msgid "Transparent background"
+msgstr "Transparante achtergrond"
