--- a/po/pa.po
+++ b/po/pa.po
@@ -2718,10 +2718,9 @@ msgstr "ਵਿੰਡੋ ਬੰਦ ਕਰੋ(_l)"
 #~ msgid "GNOME Terminal Client"
 #~ msgstr "ਗਨੋਮ ਟਰਮੀਨਲ ਕਲਾਇਟ"
 
-#~| msgid "Terminal"
-#~ msgctxt "title"
-#~ msgid "'Terminal'"
-#~ msgstr "'ਟਰਮੀਨਲ'"
+msgctxt "title"
+msgid "'Terminal'"
+msgstr "'ਟਰਮੀਨਲ'"
 
 #~ msgid "Title for terminal"
 #~ msgstr "ਟਰਮੀਨਲ ਲਈ ਟਾਈਟਲ"
@@ -2766,11 +2765,11 @@ msgstr "ਵਿੰਡੋ ਬੰਦ ਕਰੋ(_l)"
 #~ msgid "Default size:"
 #~ msgstr "ਡਿਫਾਲਟ ਸਾਈਜ਼:"
 
-#~ msgid "Title"
-#~ msgstr "ਟਾਈਟਲ"
+msgid "Title"
+msgstr "ਟਾਈਟਲ"
 
-#~ msgid "_Title:"
-#~ msgstr "ਟਾਈਟਲ(_T):"
+msgid "_Title:"
+msgstr "ਟਾਈਟਲ(_T):"
 
 #~ msgid "Title and Command"
 #~ msgstr "ਟਾਈਟਲ ਅਤੇ ਕਮਾਂਡ"
@@ -2778,8 +2777,8 @@ msgstr "ਵਿੰਡੋ ਬੰਦ ਕਰੋ(_l)"
 #~ msgid "_Unlimited"
 #~ msgstr "ਬੇਅੰਤ(_U)"
 
-#~ msgid "Set Title"
-#~ msgstr "ਟਾਈਟਲ ਸੈੱਟ ਕਰੋ"
+msgid "Set Title"
+msgstr "ਟਾਈਟਲ ਸੈੱਟ ਕਰੋ"
 
 #~ msgid "Current Locale"
 #~ msgstr "ਮੌਜੂਦ ਲੋਕੇਲ"
@@ -3559,8 +3558,8 @@ msgstr "ਵਿੰਡੋ ਬੰਦ ਕਰੋ(_l)"
 #~ msgid "_Solid color"
 #~ msgstr "ਇੱਕ ਰੰਗ ਵਰਤੋਂ(_S)"
 
-#~ msgid "_Transparent background"
-#~ msgstr "ਪਾਰਦਰਸ਼ੀ ਬੈਕਗਰਾਊਂਡ(_T)"
+msgid "Transparent background"
+msgstr "ਪਾਰਦਰਸ਼ੀ ਬੈਕਗਰਾਊਂਡ"
 
 #~ msgid "S/Key Challenge Response"
 #~ msgstr "S/ਸਵਿੱਚ ਚੈਲੰਜ਼ ਜਵਾਬ"
