--- a/po/ta.po
+++ b/po/ta.po
@@ -2171,10 +2171,9 @@ msgstr "_l சாளரத்தை மூடவும்"
 #~ msgid "Show server options"
 #~ msgstr "சேவையக தேர்வுகளை காட்டுக"
 
-#~| msgid "Terminal"
-#~ msgctxt "title"
-#~ msgid "'Terminal'"
-#~ msgstr "'முனையம்'"
+msgctxt "title"
+msgid "'Terminal'"
+msgstr "'முனையம்'"
 
 #~ msgid "Title for terminal"
 #~ msgstr "முனையத்தின் தலைப்பு"
@@ -2221,11 +2220,11 @@ msgstr "_l சாளரத்தை மூடவும்"
 #~ msgid "Default size:"
 #~ msgstr "முன்னிருப்பு அளவு:"
 
-#~ msgid "Title"
-#~ msgstr "தலைப்பு"
+msgid "Title"
+msgstr "தலைப்பு"
 
-#~ msgid "_Title:"
-#~ msgstr "_T தலைப்பு:"
+msgid "_Title:"
+msgstr "_T தலைப்பு:"
 
 #~ msgid "Title and Command"
 #~ msgstr "தலைப்பும் கட்டளையும்"
@@ -2233,8 +2232,8 @@ msgstr "_l சாளரத்தை மூடவும்"
 #~ msgid "_Unlimited"
 #~ msgstr "_U வரையரை இல்லாத"
 
-#~ msgid "Set Title"
-#~ msgstr "தலைப்பை அமைக்க"
+msgid "Set Title"
+msgstr "தலைப்பை அமைக்க"
 
 #~| msgid "_Terminal"
 #~ msgid "_About Terminal"
@@ -2243,8 +2242,8 @@ msgstr "_l சாளரத்தை மூடவும்"
 #~ msgid "Current Locale"
 #~ msgstr "தற்போதைய மொழி"
 
-#~ msgid "_Set Title…"
-#~ msgstr "(_S) தலைப்பை அமைக்க..."
+msgid "_Set Title…"
+msgstr "(_S) தலைப்பை அமைக்க..."
 
 #~ msgid "_Next Tab"
 #~ msgstr "அடுத்த கீற்று (_N)"
@@ -3028,8 +3027,8 @@ msgstr "_l சாளரத்தை மூடவும்"
 #~ msgid "_Solid color"
 #~ msgstr "(_S) ஒரே வண்ணம்"
 
-#~ msgid "_Transparent background"
-#~ msgstr "_T புலப்பாடு பின்னணி"
+msgid "Transparent background"
+msgstr "புலப்பாடு பின்னணி"
 
 #~ msgid "No such profile \"%s\", using default profile\n"
 #~ msgstr "\"%s\" என்ற வரியுரு கிடையாது, முன்னிருப்பு வரியுரு பயன்படுத்தப்படும்\n"
