--- a/po/be.po
+++ b/po/be.po
@@ -2635,3 +2635,6 @@ msgstr "_Закрыць акно"
 
 #~ msgid "Current Locale"
 #~ msgstr "Дзейная лакальнасць"
+
+msgid "Transparent background"
+msgstr "Празрысты фон"
