--- a/po/br.po
+++ b/po/br.po
@@ -958,8 +958,8 @@ msgid "_Base on:"
 msgstr ""
 
 #: ../src/profile-preferences.glade.h:1
-msgid "<b>Command</b>"
-msgstr "<b>Arc'had</b>"
+msgid "Command"
+msgstr "Arc'had"
 
 #: ../src/profile-preferences.glade.h:2
 msgid "<b>Foreground and Background</b>"
@@ -1211,7 +1211,7 @@ msgid "_Text color:"
 msgstr "Liv an destenn :"
 
 #: ../src/profile-preferences.glade.h:73
-msgid "_Transparent background"
+msgid "Transparent background"
 msgstr ""
 
 #: ../src/profile-preferences.glade.h:74
