--- a/po/eo.po
+++ b/po/eo.po
@@ -2663,8 +2663,8 @@ msgstr "_Fermi la fenestron"
 #~ msgid "_Font:"
 #~ msgstr "_Tiparo:"
 
-#~ msgid "Set Title"
-#~ msgstr "Agordi titolon"
+msgid "Set Title"
+msgstr "Agordi titolon"
 
 #~ msgid "Switch to Tab 3"
 #~ msgstr "Ŝalti al langeto 3"
@@ -2726,8 +2726,8 @@ msgstr "_Fermi la fenestron"
 #~ msgid "_Input Methods"
 #~ msgstr "_Enigmetodoj"
 
-#~ msgid "_Title:"
-#~ msgstr "_Titolo:"
+msgid "_Title:"
+msgstr "_Titolo:"
 
 #~ msgid "On the left side"
 #~ msgstr "Maldekstre"
