--- a/po/fa.po
+++ b/po/fa.po
@@ -2402,8 +2402,8 @@ msgstr "_بستن پنجره"
 #~ msgid "Use custom default terminal si_ze"
 #~ msgstr "استفاده از اندازه‌ی _سفارشی پایانه‌ی پیش‌فرض"
 
-#~ msgid "Title"
-#~ msgstr "عنوان"
+msgid "Title"
+msgstr "عنوان"
 
 #~ msgid "When terminal commands set their o_wn titles:"
 #~ msgstr "وقتی که فرمان‌های پایانه عنوان‌های _خودشان را تنظیم می‌کنند:"
@@ -2426,8 +2426,8 @@ msgstr "_بستن پنجره"
 #~ msgid "Close Window"
 #~ msgstr "بستن پنجره"
 
-#~ msgid "Set Title"
-#~ msgstr "تنظیم عنوان"
+msgid "Set Title"
+msgstr "تنظیم عنوان"
 
 #~ msgid "Switch to Tab 2"
 #~ msgstr "تعویض به زبانه‌ی ۲"
@@ -2486,5 +2486,8 @@ msgstr "_بستن پنجره"
 #~ msgid "_Input Methods"
 #~ msgstr "روش‌های _ورودی"
 
-#~ msgid "_Title:"
-#~ msgstr "_عنوان:"
+msgid "_Title:"
+msgstr "_عنوان:"
+
+msgid "Transparent background"
+msgstr "پس‌زمینه‌ی شفاف"
