--- a/po/mk.po
+++ b/po/mk.po
@@ -863,8 +863,8 @@ msgid "_Base on:"
 msgstr "_Базирано на:"
 
 #: ../src/profile-preferences.glade.h:1
-msgid "<b>Command</b>"
-msgstr "<b>Команда</b>"
+msgid "Command"
+msgstr "Команда"
 
 #: ../src/profile-preferences.glade.h:2
 #| msgid "<b>Foreground and Background</b>"
@@ -1167,8 +1167,8 @@ msgid "_Text color:"
 msgstr "_Боја на текстот:"
 
 #: ../src/profile-preferences.glade.h:77
-msgid "_Transparent background"
-msgstr "_Транспарентна позадина"
+msgid "Transparent background"
+msgstr "Транспарентна позадина"
 
 #: ../src/profile-preferences.glade.h:78
 #| msgid "_Text color:"
