--- a/po/nb.po
+++ b/po/nb.po
@@ -2261,3 +2261,15 @@ msgstr ""
 #: ../src/terminal-window.c:3210
 msgid "C_lose Window"
 msgstr "_Lukk vindu"
+
+msgid "Transparent background"
+msgstr "Gjennomsiktig bakgrunn"
+
+msgid "Title"
+msgstr "Tittel"
+
+msgid "_Title:"
+msgstr "_Tittel:"
+
+msgid "Set Title"
+msgstr "Sett tittel"
